# self-learn-face-agent

./: .gitignore  README.md  app.py  detection.py  detection2.py  face_embeddings.index  face_ids.npy  learning.py  main.py  pyproject.toml  recognition.py  recognition2.py
