[project]
name = "self-learn-face-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepface>=0.0.95",
    "faiss-cpu>=1.12.0",
    "gradio>=5.0.0",
    "langchain>=1.0.2",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.12.0.88",
    "pillow>=10.0.0",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
]
